[package]
name = "AlgorithmsAndDataStructures"
version = "0.1.0"
edition = "2021"

[lib]
name = "common"
path = "src/common/lib.rs"

[[bin]]
name = "instance_gen"
path = "src/instance_gen/main.rs"

[[bin]]
name = "solver"
path = "src/solver/main.rs"

[dependencies]
rand_xoshiro = "0.6.0"
argparse = "0.2.2"
yaml-rust = "0.4.5"
flate2 = "1.0"
bincode = { version = "2.0.0-rc.3", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.25"

[features]
wait_move_weight_calc = []
heuristic_time_dependant = []
#default = ["wait_move_weight_calc", "heuristic_time_dependant"]

[profile.profiling]
inherits = "release"
debug = true
panic = "unwind"
strip = false

[profile.release]
lto = true
strip = "symbols"
panic = "abort"

